Bech32Test.java: Fixed deprecated code.